--- a/css/main.css
+++ b/css/main.css
@@ -60,6 +60,14 @@ img {
   text-decoration: none;
 }
 
+body {
+  font-family: "Roboto", sans-serif;
+  color: var(--primary-text-color);
+  background-color: var(--fon-color);
+  font-size: 14px;
+  letter-spacing: 0.03em;
+}
+
 .section {
   padding-top: 94px;
   padding-bottom: 94px;
@@ -819,6 +827,7 @@ img {
   border: none;
   border-radius: 4px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .btn-portfolio:hover,
@@ -826,7 +835,6 @@ img {
   background-color: var(--accent-color);
   color: var(--fon-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .btn-container {
