--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -25,3 +25,10 @@ img {
 .link {
   text-decoration: none;
 }
+body {
+  font-family: 'Roboto', sans-serif;
+  color: var(--primary-text-color);
+  background-color: var(--fon-color);
+  font-size: 14px;
+  letter-spacing: 0.03em;
+}
